2014-09-04	Erik E. Lorenz	<erik.e.lorenz@gmail.com>

	* src/latexrefre.sh: looking for .pdf_tex files, too
	looking for a tex file that contains '\documentclass'
	updating on .sty files

2014-09-03	Erik E. Lorenz	<erik.e.lorenz@gmail.com>

	* src/pacman-disowned.sh: script to view disowned files added

2014-09-01	Erik E. Lorenz	<erik.e.lorenz@gmail.com>

	* src/latexrefre.sh: emphasising errors and warnings using bash color escape codes

2014-08-28	Erik E. Lorenz	<erik.e.lorenz@gmail.com>

	* src/lmpmpi.sh: removed

	* src/lmprun.sh: removed

	* src/gitfilter.sh: awesome wrapper around 'git filter-branch' added

2014-08-26	Erik E. Lorenz	<erik.e.lorenz@gmail.com>

	* src/changelogfiles.sh: renamed to changelogupdate.sh

	* src/changelogupdate.sh: can be invoked by emacs and vim
	warning if there's no change to be added

	* src/changelogline.sh: cheader comments reformatted


2014-08-25	Erik E. Lorenz	<erik.e.lorenz@gmail.com>

	* src/changelogfiles.sh: script to automatically format git changes for a changelog

2014-08-22	Erik E. Lorenz	<erik.e.lorenz@gmail.com>

	* src/fetchall.sh: script to update bare git repos (one-way)

2014-08-19	Erik E. Lorenz	<erik.e.lorenz@gmail.com>

	* src/mountasuser.sh: don't return an error if it's already mounted

	* src/xzdir.sh: PBS script for directory compression added
	PBS options adjusted

	* runxclock.sh: .Xauthority added

	* matstudlicense.sh: removed

	* o: removed

	* twowaysync.sh: removed

2014-08-11	Erik E. Lorenz	<erik.e.lorenz@gmail.com>

	* Makefile.am: `make distcheck` enabled

2014-08-05	Erik E. Lorenz	<erik.e.lorenz@gmail.com>

	* src/element2mass.py: added

2014-06-26	Erik E. Lorenz	<erik.e.lorenz@gmail.com>

	* src/pushall.sh: pushing tags of the master branch

2014-06-25	Erik E. Lorenz	<erik.e.lorenz@gmail.com>

	* src/changelogline.sh: This script prints the changelog author line. New name required.

	* src/aldcopy.sh: removed since parsivald now has a global data directory and proper installation path
