@@ -1,3 +1,7 @@
+2014-09-11	Erik E. Lorenz	<erik.e.lorenz@gmail.com>
+
+	* src/latexrefre.sh: re-compiling on changes to the toc, lof, loa or lot
+
 2014-09-04	Erik E. Lorenz	<erik.e.lorenz@gmail.com>
 
 	* src/latexrefre.sh: looking for .pdf_tex files, too
